--- a/01-What-Is-Machine-Learning.ipynb
+++ b/01-What-Is-Machine-Learning.ipynb
@@ -125,9 +125,9 @@
     "\n",
     "For the training set, these labels might be determined by individual inspection of a small representative sample of emails; for the remaining emails, the label would be determined using the model.\n",
     "For a suitably trained classification algorithm with enough well-constructed features (typically thousands or millions of words or phrases), this type of approach can be very effective.\n",
-    "We will see an example of such text-based classification in [In Depth: Naive Bayes Classification](05.05-Naive-Bayes.ipynb).\n",
+    "We will see an example of such text-based classification in [In Depth: Naive Bayes Classification](05-Naive-Bayes.ipynb).\n",
     "\n",
-    "Some important classification algorithms that we will discuss in more detail are Gaussian naive Bayes (see [In Depth: Naive Bayes Classification](05.05-Naive-Bayes.ipynb)), support vector machines (see [In-Depth: Support Vector Machines](05.07-Support-Vector-Machines.ipynb)), and random forest classification (see [In-Depth: Decision Trees and Random Forests](05.08-Random-Forests.ipynb))."
+    "Some important classification algorithms that we will discuss in more detail are Gaussian naive Bayes (see [In Depth: Naive Bayes Classification](05-Naive-Bayes.ipynb)), support vector machines (see [In-Depth: Support Vector Machines](07-Support-Vector-Machines.ipynb)), and random forest classification (see [In-Depth: Decision Trees and Random Forests](08-Random-Forests.ipynb))."
    ]
   },
   {
@@ -216,7 +216,7 @@
     "Distances to remaining galaxies could then be estimated using a suitable regression model, without the need to employ the more expensive observation across the entire set.\n",
     "In astronomy circles, this is known as the \"photometric redshift\" problem.\n",
     "\n",
-    "Some important regression algorithms that we will discuss are linear regression (see [In Depth: Linear Regression](05.06-Linear-Regression.ipynb)), support vector machines (see [In-Depth: Support Vector Machines](05.07-Support-Vector-Machines.ipynb)), and random forest regression (see [In-Depth: Decision Trees and Random Forests](05.08-Random-Forests.ipynb))."
+    "Some important regression algorithms that we will discuss are linear regression (see [In Depth: Linear Regression](06-Linear-Regression.ipynb)), support vector machines (see [In-Depth: Support Vector Machines](07-Support-Vector-Machines.ipynb)), and random forest regression (see [In-Depth: Decision Trees and Random Forests](08-Random-Forests.ipynb))."
    ]
   },
   {
@@ -245,7 +245,7 @@
    "source": [
     "By eye, it is clear that each of these points is part of a distinct group.\n",
     "Given this input, a clustering model will use the intrinsic structure of the data to determine which points are related.\n",
-    "Using the very fast and intuitive *k*-means algorithm (see [In Depth: K-Means Clustering](05.11-K-Means.ipynb)), we find the clusters shown in the following figure:"
+    "Using the very fast and intuitive *k*-means algorithm (see [In Depth: K-Means Clustering](11-K-Means.ipynb)), we find the clusters shown in the following figure:"
    ]
   },
   {
@@ -263,7 +263,7 @@
     "Again, this might seem like a trivial exercise in two dimensions, but as our data becomes larger and more complex such clustering algorithms can continue to be employed to extract useful information from the dataset.\n",
     "\n",
     "We will discuss the *k*-means algorithm in more depth in [In Depth: K-Means Clustering](05.11-K-Means.ipynb).\n",
-    "Other important clustering algorithms include Gaussian mixture models (see [In Depth: Gaussian Mixture Models](05.12-Gaussian-Mixtures.ipynb)) and spectral clustering (see [Scikit-Learn's clustering documentation](http://scikit-learn.org/stable/modules/clustering.html))."
+    "Other important clustering algorithms include Gaussian mixture models (see [In Depth: Gaussian Mixture Models](12-Gaussian-Mixtures.ipynb)) and spectral clustering (see [Scikit-Learn's clustering documentation](http://scikit-learn.org/stable/modules/clustering.html))."
    ]
   },
   {
@@ -274,7 +274,7 @@
     "\n",
     "Dimensionality reduction is another example of an unsupervised algorithm, in which labels or other information are inferred from the structure of the dataset itself.\n",
     "Dimensionality reduction is a bit more abstract than the examples we looked at before, but generally it seeks to pull out some low-dimensional representation of data that in some way preserves relevant qualities of the full dataset.\n",
-    "Different dimensionality reduction routines measure these relevant qualities in different ways, as we will see in [In-Depth: Manifold Learning](05.10-Manifold-Learning.ipynb).\n",
+    "Different dimensionality reduction routines measure these relevant qualities in different ways, as we will see in [In-Depth: Manifold Learning](10-Manifold-Learning.ipynb).\n",
     "\n",
     "As an example of this, consider the data shown in the following figure:"
    ]
@@ -313,7 +313,7 @@
     "For example, we might wish to visualize important relationships within a dataset that has 100 or 1,000 features.\n",
     "Visualizing 1,000-dimensional data is a challenge, and one way we can make this more manageable is to use a dimensionality reduction technique to reduce the data to 2 or 3 dimensions.\n",
     "\n",
-    "Some important dimensionality reduction algorithms that we will discuss are principal component analysis (see [In Depth: Principal Component Analysis](05.09-Principal-Component-Analysis.ipynb)) and various manifold learning algorithms, including Isomap and locally linear embedding (see [In-Depth: Manifold Learning](05.10-Manifold-Learning.ipynb))."
+    "Some important dimensionality reduction algorithms that we will discuss are principal component analysis (see [In Depth: Principal Component Analysis](09-Principal-Component-Analysis.ipynb)) and various manifold learning algorithms, including Isomap and locally linear embedding (see [In-Depth: Manifold Learning](10-Manifold-Learning.ipynb))."
    ]
   },
   {
