--- a/02-Introducing-Scikit-Learn.ipynb
+++ b/02-Introducing-Scikit-Learn.ipynb
@@ -442,7 +442,7 @@
     "These are examples of the important choices that must be made *once the model class is selected*.\n",
     "These choices are often represented as *hyperparameters*, or parameters that must be set before the model is fit to data.\n",
     "In Scikit-Learn, hyperparameters are chosen by passing values at model instantiation.\n",
-    "We will explore how you can quantitatively choose hyperparameters in [Hyperparameters and Model Validation](05.03-Hyperparameters-and-Model-Validation.ipynb).\n",
+    "We will explore how you can quantitatively choose hyperparameters in [Hyperparameters and Model Validation](03-Hyperparameters-and-Model-Validation.ipynb).\n",
     "\n",
     "For our linear regression example, we can instantiate the `LinearRegression` class and specify that we would like to fit the intercept using the `fit_intercept` hyperparameter:"
    ]
@@ -712,7 +712,7 @@
     "Let's take a look at another example of this process, using the Iris dataset we discussed earlier.\n",
     "Our question will be this: given a model trained on a portion of the Iris data, how well can we predict the remaining labels?\n",
     "\n",
-    "For this task, we will use a simple generative model known as *Gaussian naive Bayes*, which proceeds by assuming each class is drawn from an axis-aligned Gaussian distribution (see [In Depth: Naive Bayes Classification](05.05-Naive-Bayes.ipynb) for more details).\n",
+    "For this task, we will use a simple generative model known as *Gaussian naive Bayes*, which proceeds by assuming each class is drawn from an axis-aligned Gaussian distribution (see [In Depth: Naive Bayes Classification](05-Naive-Bayes.ipynb) for more details).\n",
     "Because it is so fast and has no hyperparameters to choose, Gaussian naive Bayes is often a good model to use as a baseline classification, before exploring whether improvements can be found through more sophisticated models.\n",
     "\n",
     "We would like to evaluate the model on data it has not seen before, so we will split the data into a *training set* and a *testing set*.\n",
@@ -806,7 +806,7 @@
     "The task of dimensionality reduction centers around determining whether there is a suitable lower-dimensional representation that retains the essential features of the data.\n",
     "Often dimensionality reduction is used as an aid to visualizing data: after all, it is much easier to plot data in two dimensions than in four dimensions or more!\n",
     "\n",
-    "Here we will use *principal component analysis* (PCA; see [In Depth: Principal Component Analysis](05.09-Principal-Component-Analysis.ipynb)), which is a fast linear dimensionality reduction technique.\n",
+    "Here we will use *principal component analysis* (PCA; see [In Depth: Principal Component Analysis](09-Principal-Component-Analysis.ipynb)), which is a fast linear dimensionality reduction technique.\n",
     "We will ask the model to return two components—that is, a two-dimensional representation of the data.\n",
     "\n",
     "Following the sequence of steps outlined earlier, we have:"
@@ -877,7 +877,7 @@
     "\n",
     "Let's next look at applying clustering to the Iris data.\n",
     "A clustering algorithm attempts to find distinct groups of data without reference to any labels.\n",
-    "Here we will use a powerful clustering method called a *Gaussian mixture model* (GMM), discussed in more detail in [In Depth: Gaussian Mixture Models](05.12-Gaussian-Mixtures.ipynb).\n",
+    "Here we will use a powerful clustering method called a *Gaussian mixture model* (GMM), discussed in more detail in [In Depth: Gaussian Mixture Models](12-Gaussian-Mixtures.ipynb).\n",
     "A GMM attempts to model the data as a collection of Gaussian blobs.\n",
     "\n",
     "We can fit the Gaussian mixture model as follows:"
@@ -1110,7 +1110,7 @@
     "\n",
     "We'd like to visualize our points within the 64-dimensional parameter space, but it's difficult to effectively visualize points in such a high-dimensional space.\n",
     "Instead, we'll reduce the number of dimensions, using an unsupervised method.\n",
-    "Here, we'll make use of a manifold learning algorithm called Isomap (see [In-Depth: Manifold Learning](05.10-Manifold-Learning.ipynb)) and transform the data to two dimensions:"
+    "Here, we'll make use of a manifold learning algorithm called Isomap (see [In-Depth: Manifold Learning](10-Manifold-Learning.ipynb)) and transform the data to two dimensions:"
    ]
   },
   {
@@ -1344,7 +1344,7 @@
    "metadata": {},
    "source": [
     "Examining this subset of the data can give us some insight into where the algorithm might be not performing optimally.\n",
-    "To go beyond our 83% classification success rate, we might switch to a more sophisticated algorithm such as support vector machines (see [In-Depth: Support Vector Machines](05.07-Support-Vector-Machines.ipynb)), random forests (see [In-Depth: Decision Trees and Random Forests](05.08-Random-Forests.ipynb)), or another classification approach."
+    "To go beyond our 83% classification success rate, we might switch to a more sophisticated algorithm such as support vector machines (see [In-Depth: Support Vector Machines](07-Support-Vector-Machines.ipynb)), random forests (see [In-Depth: Decision Trees and Random Forests](08-Random-Forests.ipynb)), or another classification approach."
    ]
   },
   {
