--- a/03-Hyperparameters-and-Model-Validation.ipynb
+++ b/03-Hyperparameters-and-Model-Validation.ipynb
@@ -461,7 +461,7 @@
     "\n",
     "We can generalize this to any number of polynomial features.\n",
     "In Scikit-Learn, we can implement this with a linear regression classifier combined with the polynomial preprocessor.\n",
-    "We will use a *pipeline* to string these operations together (we will discuss polynomial features and pipelines more fully in [Feature Engineering](05.04-Feature-Engineering.ipynb)):"
+    "We will use a *pipeline* to string these operations together (we will discuss polynomial features and pipelines more fully in [Feature Engineering](04-Feature-Engineering.ipynb)):"
    ]
   },
   {
@@ -959,7 +959,7 @@
    "metadata": {},
    "source": [
     "Other options in `GridSearchCV` include the ability to specify a custom scoring function, to parallelize the computations, to do randomized searches, and more.\n",
-    "For more information, see the examples in [In-Depth: Kernel Density Estimation](05.13-Kernel-Density-Estimation.ipynb) and [Feature Engineering: Working with Images](05.14-Image-Features.ipynb), or refer to Scikit-Learn's [grid search documentation](http://Scikit-Learn.org/stable/modules/grid_search.html)."
+    "For more information, see the examples in [In-Depth: Kernel Density Estimation](13-Kernel-Density-Estimation.ipynb) and [Feature Engineering: Working with Images](14-Image-Features.ipynb), or refer to Scikit-Learn's [grid search documentation](http://Scikit-Learn.org/stable/modules/grid_search.html)."
    ]
   },
   {
