--- a/04-Feature-Engineering.ipynb
+++ b/04-Feature-Engineering.ipynb
@@ -435,7 +435,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For an example of using TF-IDF in a classification problem, see [In Depth: Naive Bayes Classification](05.05-Naive-Bayes.ipynb)."
+    "For an example of using TF-IDF in a classification problem, see [In Depth: Naive Bayes Classification](05-Naive-Bayes.ipynb)."
    ]
   },
   {
@@ -445,11 +445,11 @@
     "## Image Features\n",
     "\n",
     "Another common need is to suitably encode images for machine learning analysis.\n",
-    "The simplest approach is what we used for the digits data in [Introducing Scikit-Learn](05.02-Introducing-Scikit-Learn.ipynb): simply using the pixel values themselves.\n",
+    "The simplest approach is what we used for the digits data in [Introducing Scikit-Learn](02-Introducing-Scikit-Learn.ipynb): simply using the pixel values themselves.\n",
     "But depending on the application, such an approach may not be optimal.\n",
     "\n",
     "A comprehensive summary of feature extraction techniques for images is well beyond the scope of this chapter, but you can find excellent implementations of many of the standard approaches in the [Scikit-Image project](http://scikit-image.org).\n",
-    "For one example of using Scikit-Learn and Scikit-Image together, see [Feature Engineering: Working with Images](05.14-Image-Features.ipynb)."
+    "For one example of using Scikit-Learn and Scikit-Image together, see [Feature Engineering: Working with Images](14-Image-Features.ipynb)."
    ]
   },
   {
@@ -459,7 +459,7 @@
     "## Derived Features\n",
     "\n",
     "Another useful type of feature is one that is mathematically derived from some input features.\n",
-    "We saw an example of this in [Hyperparameters and Model Validation](05.03-Hyperparameters-and-Model-Validation.ipynb) when we constructed *polynomial features* from our input data.\n",
+    "We saw an example of this in [Hyperparameters and Model Validation](03-Hyperparameters-and-Model-Validation.ipynb) when we constructed *polynomial features* from our input data.\n",
     "We saw that we could convert a linear regression into a polynomial regression not by changing the model, but by transforming the input!\n",
     "\n",
     "For example, this data clearly cannot be well described by a straight line (see Figure 40-1):"
@@ -615,8 +615,8 @@
    "metadata": {},
    "source": [
     "This idea of improving a model not by changing the model, but by transforming the inputs, is fundamental to many of the more powerful machine learning methods.\n",
-    "We'll explore this idea further in [In Depth: Linear Regression](05.06-Linear-Regression.ipynb) in the context of *basis function regression*.\n",
-    "More generally, this is one motivational path to the powerful set of techniques known as *kernel methods*, which we will explore in [In-Depth: Support Vector Machines](05.07-Support-Vector-Machines.ipynb)."
+    "We'll explore this idea further in [In Depth: Linear Regression](06-Linear-Regression.ipynb) in the context of *basis function regression*.\n",
+    "More generally, this is one motivational path to the powerful set of techniques known as *kernel methods*, which we will explore in [In-Depth: Support Vector Machines](07-Support-Vector-Machines.ipynb)."
    ]
   },
   {
@@ -792,9 +792,9 @@
    "metadata": {},
    "source": [
     "All the steps of the model are applied automatically.\n",
-    "Notice that for simplicity, in this demonstration we've applied the model to the data it was trained on; this is why it was able to perfectly predict the result (refer back to [Hyperparameters and Model Validation](05.03-Hyperparameters-and-Model-Validation.ipynb) for further discussion of this).\n",
+    "Notice that for simplicity, in this demonstration we've applied the model to the data it was trained on; this is why it was able to perfectly predict the result (refer back to [Hyperparameters and Model Validation](03-Hyperparameters-and-Model-Validation.ipynb) for further discussion of this).\n",
     "\n",
-    "For some examples of Scikit-Learn pipelines in action, see the following chapter on naive Bayes classification, as well as [In Depth: Linear Regression](05.06-Linear-Regression.ipynb) and [In-Depth: Support Vector Machines](05.07-Support-Vector-Machines.ipynb)."
+    "For some examples of Scikit-Learn pipelines in action, see the following chapter on naive Bayes classification, as well as [In Depth: Linear Regression](06-Linear-Regression.ipynb) and [In-Depth: Support Vector Machines](07-Support-Vector-Machines.ipynb)."
    ]
   }
  ],
