--- a/06-Linear-Regression.ipynb
+++ b/06-Linear-Regression.ipynb
@@ -14,7 +14,7 @@
     "editable": true
    },
    "source": [
-    "Just as naive Bayes (discussed in [In Depth: Naive Bayes Classification](05.05-Naive-Bayes.ipynb)) is a good starting point for classification tasks, linear regression models are a good starting point for regression tasks.\n",
+    "Just as naive Bayes (discussed in [In Depth: Naive Bayes Classification](05-Naive-Bayes.ipynb)) is a good starting point for classification tasks, linear regression models are a good starting point for regression tasks.\n",
     "Such models are popular because they can be fit quickly and are straightforward to interpret.\n",
     "You are already familiar with the simplest form of linear regression model (i.e., fitting a straight line to two-dimensional data), but such models can be extended to model more complicated data behavior.\n",
     "\n",
@@ -252,7 +252,7 @@
     "## Basis Function Regression\n",
     "\n",
     "One trick you can use to adapt linear regression to nonlinear relationships between variables is to transform the data according to *basis functions*.\n",
-    "We have seen one version of this before, in the `PolynomialRegression` pipeline used in [Hyperparameters and Model Validation](05.03-Hyperparameters-and-Model-Validation.ipynb) and [Feature Engineering](05.04-Feature-Engineering.ipynb).\n",
+    "We have seen one version of this before, in the `PolynomialRegression` pipeline used in [Hyperparameters and Model Validation](03-Hyperparameters-and-Model-Validation.ipynb) and [Feature Engineering](04-Feature-Engineering.ipynb).\n",
     "The idea is to take our multidimensional linear model:\n",
     "$$\n",
     "y = a_0 + a_1 x_1 + a_2 x_2 + a_3 x_3 + \\cdots\n",
@@ -322,7 +322,7 @@
     "We see here that the transformer has converted our one-dimensional array into a three-dimensional array, where each column contains the exponentiated value.\n",
     "This new, higher-dimensional data representation can then be plugged into a linear regression.\n",
     "\n",
-    "As we saw in [Feature Engineering](05.04-Feature-Engineering.ipynb), the cleanest way to accomplish this is to use a pipeline.\n",
+    "As we saw in [Feature Engineering](04-Feature-Engineering.ipynb), the cleanest way to accomplish this is to use a pipeline.\n",
     "Let's make a 7th-degree polynomial model in this way:"
    ]
   },
@@ -509,7 +509,7 @@
    "source": [
     "## Regularization\n",
     "\n",
-    "The introduction of basis functions into our linear regression makes the model much more flexible, but it also can very quickly lead to overfitting (refer back to [Hyperparameters and Model Validation](05.03-Hyperparameters-and-Model-Validation.ipynb) for a discussion of this).\n",
+    "The introduction of basis functions into our linear regression makes the model much more flexible, but it also can very quickly lead to overfitting (refer back to [Hyperparameters and Model Validation](03-Hyperparameters-and-Model-Validation.ipynb) for a discussion of this).\n",
     "For example, the following figure shows what happens if we use a large number of Gaussian basis functions:"
    ]
   },
@@ -730,7 +730,7 @@
    },
    "source": [
     "With the lasso regression penalty, the majority of the coefficients are exactly zero, with the functional behavior being modeled by a small subset of the available basis functions.\n",
-    "As with ridge regularization, the $\\alpha$ parameter tunes the strength of the penalty and should be determined via, for example, cross-validation (refer back to [Hyperparameters and Model Validation](05.03-Hyperparameters-and-Model-Validation.ipynb) for a discussion of this)."
+    "As with ridge regularization, the $\\alpha$ parameter tunes the strength of the penalty and should be determined via, for example, cross-validation (refer back to [Hyperparameters and Model Validation](03-Hyperparameters-and-Model-Validation.ipynb) for a discussion of this)."
    ]
   },
   {
