--- a/07-Support-Vector-Machines.ipynb
+++ b/07-Support-Vector-Machines.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As part of our discussion of Bayesian classification (see [In Depth: Naive Bayes Classification](05.05-Naive-Bayes.ipynb)), we learned about a simple kind of model that describes the distribution of each underlying class, and experimented with using it to probabilistically determine labels for new points.\n",
+    "As part of our discussion of Bayesian classification (see [In Depth: Naive Bayes Classification](05-Naive-Bayes.ipynb)), we learned about a simple kind of model that describes the distribution of each underlying class, and experimented with using it to probabilistically determine labels for new points.\n",
     "That was an example of *generative classification*; here we will consider instead *discriminative classification*. That is, rather than modeling each class, we will simply find a line or curve (in two dimensions) or manifold (in multiple dimensions) that divides the classes from each other.\n",
     "\n",
     "As an example of this, consider the simple case of a classification task in which the two classes of points are well separated (see the following figure):"
@@ -437,7 +437,7 @@
     "### Beyond Linear Boundaries: Kernel SVM\n",
     "\n",
     "Where SVM can become quite powerful is when it is combined with *kernels*.\n",
-    "We have seen a version of kernels before, in the basis function regressions of [In Depth: Linear Regression](05.06-Linear-Regression.ipynb).\n",
+    "We have seen a version of kernels before, in the basis function regressions of [In Depth: Linear Regression](06-Linear-Regression.ipynb).\n",
     "There we projected our data into a higher-dimensional space defined by polynomials and Gaussian basis functions, and thereby were able to fit for nonlinear relationships with a linear classifier.\n",
     "\n",
     "In SVM models, we can use a version of the same idea.\n",
@@ -480,7 +480,7 @@
    "metadata": {},
    "source": [
     "It is clear that no linear discrimination will *ever* be able to separate this data.\n",
-    "But we can draw a lesson from the basis function regressions in [In Depth: Linear Regression](05.06-Linear-Regression.ipynb), and think about how we might project the data into a higher dimension such that a linear separator *would* be sufficient.\n",
+    "But we can draw a lesson from the basis function regressions in [In Depth: Linear Regression](06-Linear-Regression.ipynb), and think about how we might project the data into a higher dimension such that a linear separator *would* be sufficient.\n",
     "For example, one simple projection we could use would be to compute a *radial basis function* (RBF) centered on the middle clump:"
    ]
   },
@@ -717,7 +717,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The optimal value of `C` will depend on your dataset, and you should tune this parameter using cross-validation or a similar procedure (refer back to [Hyperparameters and Model Validation](05.03-Hyperparameters-and-Model-Validation.ipynb))."
+    "The optimal value of `C` will depend on your dataset, and you should tune this parameter using cross-validation or a similar procedure (refer back to [Hyperparameters and Model Validation](03-Hyperparameters-and-Model-Validation.ipynb))."
    ]
   },
   {
@@ -799,7 +799,7 @@
    "metadata": {},
    "source": [
     "Each image contains 62 × 47, or around 3,000, pixels.\n",
-    "We could proceed by simply using each pixel value as a feature, but often it is more effective to use some sort of preprocessor to extract more meaningful features; here we will use principal component analysis (see [In Depth: Principal Component Analysis](05.09-Principal-Component-Analysis.ipynb)) to extract 150 fundamental components to feed into our support vector machine classifier.\n",
+    "We could proceed by simply using each pixel value as a feature, but often it is more effective to use some sort of preprocessor to extract more meaningful features; here we will use principal component analysis (see [In Depth: Principal Component Analysis](09-Principal-Component-Analysis.ipynb)) to extract 150 fundamental components to feed into our support vector machine classifier.\n",
     "We can do this most straightforwardly by packaging the preprocessor and the classifier into a single pipeline:"
    ]
   },
