--- a/08-Random-Forests.ipynb
+++ b/08-Random-Forests.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Previously we have looked in depth at a simple generative classifier (naive Bayes; see [In Depth: Naive Bayes Classification](05.05-Naive-Bayes.ipynb)) and a powerful discriminative classifier (support vector machines; see [In-Depth: Support Vector Machines](05.07-Support-Vector-Machines.ipynb)).\n",
+    "Previously we have looked in depth at a simple generative classifier (naive Bayes; see [In Depth: Naive Bayes Classification](05-Naive-Bayes.ipynb)) and a powerful discriminative classifier (support vector machines; see [In-Depth: Support Vector Machines](07-Support-Vector-Machines.ipynb)).\n",
     "Here we'll take a look at another powerful algorithm: a nonparametric algorithm called *random forests*.\n",
     "Random forests are an example of an *ensemble* method, meaning one that relies on aggregating the results of a set of simpler estimators.\n",
     "The somewhat surprising result with such ensemble methods is that the sum can be greater than the parts: that is, the predictive accuracy of a majority vote among a number of estimators can end up being better than that of any of the individual estimators doing the voting!\n",
