--- a/09-Principal-Component-Analysis.ipynb
+++ b/09-Principal-Component-Analysis.ipynb
@@ -52,7 +52,7 @@
    "source": [
     "## Introducing Principal Component Analysis\n",
     "\n",
-    "Principal component analysis is a fast and flexible unsupervised method for dimensionality reduction in data, which we saw briefly in [Introducing Scikit-Learn](05.02-Introducing-Scikit-Learn.ipynb).\n",
+    "Principal component analysis is a fast and flexible unsupervised method for dimensionality reduction in data, which we saw briefly in [Introducing Scikit-Learn](02-Introducing-Scikit-Learn.ipynb).\n",
     "Its behavior is easiest to visualize by looking at a two-dimensional dataset.\n",
     "Consider these 200 points (see the following figure):"
    ]
@@ -95,7 +95,7 @@
    },
    "source": [
     "By eye, it is clear that there is a nearly linear relationship between the *x* and *y* variables.\n",
-    "This is reminiscent of the linear regression data we explored in [In Depth: Linear Regression](05.06-Linear-Regression.ipynb), but the problem setting here is slightly different: rather than attempting to *predict* the *y* values from the *x* values, the unsupervised learning problem attempts to learn about the *relationship* between the *x* and *y* values.\n",
+    "This is reminiscent of the linear regression data we explored in [In Depth: Linear Regression](06-Linear-Regression.ipynb), but the problem setting here is slightly different: rather than attempting to *predict* the *y* values from the *x* values, the unsupervised learning problem attempts to learn about the *relationship* between the *x* and *y* values.\n",
     "\n",
     "In principal component analysis, this relationship is quantified by finding a list of the *principal axes* in the data, and using those axes to describe the dataset.\n",
     "Using Scikit-Learn's `PCA` estimator, we can compute this as follows:"
@@ -380,7 +380,7 @@
     "### PCA for Visualization: Handwritten Digits\n",
     "\n",
     "The usefulness of dimensionality reduction may not be entirely apparent in only two dimensions, but it becomes clear when looking at high-dimensional data.\n",
-    "To see this, let's take a quick look at the application of PCA to the digits dataset we worked with in [In-Depth: Decision Trees and Random Forests](05.08-Random-Forests.ipynb).\n",
+    "To see this, let's take a quick look at the application of PCA to the digits dataset we worked with in [In-Depth: Decision Trees and Random Forests](08-Random-Forests.ipynb).\n",
     "\n",
     "We'll start by loading the data:"
    ]
@@ -863,7 +863,7 @@
    "source": [
     "## Example: Eigenfaces\n",
     "\n",
-    "Earlier we explored an example of using a PCA projection as a feature selector for facial recognition with a support vector machine (see [In-Depth: Support Vector Machines](05.07-Support-Vector-Machines.ipynb)).\n",
+    "Earlier we explored an example of using a PCA projection as a feature selector for facial recognition with a support vector machine (see [In-Depth: Support Vector Machines](07-Support-Vector-Machines.ipynb)).\n",
     "Here we will take a look back and explore a bit more of what went into that.\n",
     "Recall that we were using the Labeled Faces in the Wild (LFW) dataset made available through Scikit-Learn:"
    ]
@@ -1094,7 +1094,7 @@
    },
    "source": [
     "The top row here shows the input images, while the bottom row shows the reconstruction of the images from just 150 of the ~3,000 initial features.\n",
-    "This visualization makes clear why the PCA feature selection used in [In-Depth: Support Vector Machines](05.07-Support-Vector-Machines.ipynb) was so successful: although it reduces the dimensionality of the data by nearly a factor of 20, the projected images contain enough information that we might, by eye, recognize the individuals in each image. This means our classification algorithm only needs to be trained on 150-dimensional data rather than 3,000-dimensional data, which, depending on the particular algorithm we choose, can lead to much more efficient classification."
+    "This visualization makes clear why the PCA feature selection used in [In-Depth: Support Vector Machines](07-Support-Vector-Machines.ipynb) was so successful: although it reduces the dimensionality of the data by nearly a factor of 20, the projected images contain enough information that we might, by eye, recognize the individuals in each image. This means our classification algorithm only needs to be trained on 150-dimensional data rather than 3,000-dimensional data, which, depending on the particular algorithm we choose, can lead to much more efficient classification."
    ]
   },
   {
@@ -1113,7 +1113,7 @@
     "\n",
     "PCA's main weakness is that it tends to be highly affected by outliers in the data.\n",
     "For this reason, several robust variants of PCA have been developed, many of which act to iteratively discard data points that are poorly described by the initial components.\n",
-    "Scikit-Learn includes a number of interesting variants on PCA in the `sklearn.decomposition` submodule; one example is `SparsePCA`, which introduces a regularization term (see [In Depth: Linear Regression](05.06-Linear-Regression.ipynb)) that serves to enforce sparsity of the components.\n",
+    "Scikit-Learn includes a number of interesting variants on PCA in the `sklearn.decomposition` submodule; one example is `SparsePCA`, which introduces a regularization term (see [In Depth: Linear Regression](06-Linear-Regression.ipynb)) that serves to enforce sparsity of the components.\n",
     "\n",
     "In the following chapters, we will look at other unsupervised learning methods that build on some of the ideas of PCA."
    ]
