--- a/12-Gaussian-Mixtures.ipynb
+++ b/12-Gaussian-Mixtures.ipynb
@@ -229,7 +229,7 @@
     "By eye, we recognize that these transformed clusters are noncircular, and thus circular clusters would be a poor fit.\n",
     "Nevertheless, *k*-means is not flexible enough to account for this, and tries to force-fit the data into four circular clusters.\n",
     "This results in a mixing of cluster assignments where the resulting circles overlap: see especially the bottom-right of this plot.\n",
-    "One might imagine addressing this particular situation by preprocessing the data with PCA (see [In Depth: Principal Component Analysis](05.09-Principal-Component-Analysis.ipynb)), but in practice there is no guarantee that such a global operation will circularize the individual groups.\n",
+    "One might imagine addressing this particular situation by preprocessing the data with PCA (see [In Depth: Principal Component Analysis](09-Principal-Component-Analysis.ipynb)), but in practice there is no guarantee that such a global operation will circularize the individual groups.\n",
     "\n",
     "These two disadvantages of *k*-means—its lack of flexibility in cluster shape and lack of probabilistic cluster assignment—mean that for many datasets (especially low-dimensional datasets) it may not perform as well as you might hope.\n",
     "\n",
@@ -555,7 +555,7 @@
     "Though the GMM is often categorized as a clustering algorithm, fundamentally it is an algorithm for *density estimation*.\n",
     "That is to say, the result of a GMM fit to some data is technically not a clustering model, but a generative probabilistic model describing the distribution of the data.\n",
     "\n",
-    "As an example, consider some data generated from Scikit-Learn's `make_moons` function, introduced in [In Depth: K-Means Clustering](05.11-K-Means.ipynb) (see the following figure):"
+    "As an example, consider some data generated from Scikit-Learn's `make_moons` function, introduced in [In Depth: K-Means Clustering](11-K-Means.ipynb) (see the following figure):"
    ]
   },
   {
