--- a/13-Kernel-Density-Estimation.ipynb
+++ b/13-Kernel-Density-Estimation.ipynb
@@ -557,7 +557,7 @@
     "\n",
     "This example looks at Bayesian generative classification with KDE, and demonstrates how to use the Scikit-Learn architecture to create a custom estimator.\n",
     "\n",
-    "In [In Depth: Naive Bayes Classification](05.05-Naive-Bayes.ipynb) we explored naive Bayesian classification, in which we create a simple generative model for each class, and use these models to build a fast classifier.\n",
+    "In [In Depth: Naive Bayes Classification](05-Naive-Bayes.ipynb) we explored naive Bayesian classification, in which we create a simple generative model for each class, and use these models to build a fast classifier.\n",
     "For Gaussian naive Bayes, the generative model is a simple axis-aligned Gaussian.\n",
     "With a density estimation algorithm like KDE, we can remove the \"naive\" element and perform the same classification with a more sophisticated generative model for each class.\n",
     "It's still Bayesian classification, but it's no longer naive.\n",
@@ -750,7 +750,7 @@
     "### Using Our Custom Estimator\n",
     "\n",
     "Let's try this custom estimator on a problem we have seen before: the classification of handwritten digits.\n",
-    "Here we will load the digits and compute the cross-validation score for a range of candidate bandwidths using the ``GridSearchCV`` meta-estimator (refer back to [Hyperparameters and Model Validation](05.03-Hyperparameters-and-Model-Validation.ipynb)):"
+    "Here we will load the digits and compute the cross-validation score for a range of candidate bandwidths using the ``GridSearchCV`` meta-estimator (refer back to [Hyperparameters and Model Validation](03-Hyperparameters-and-Model-Validation.ipynb)):"
    ]
   },
   {
