--- a/10-Manifold-Learning.ipynb
+++ b/10-Manifold-Learning.ipynb
@@ -676,7 +676,7 @@
     "One place manifold learning is often used is in understanding the relationship between high-dimensional data points.\n",
     "A common case of high-dimensional data is images: for example, a set of images with 1,000 pixels each can be thought of as a collection of points in 1,000 dimensions, with the brightness of each pixel in each image defining the coordinate in that dimension.\n",
     "\n",
-    "To illustrate, let's apply Isomap on some data from the Labeled Faces in the Wild dataset, which we previously saw in [In-Depth: Support Vector Machines](05.07-Support-Vector-Machines.ipynb) and [In Depth: Principal Component Analysis](05.09-Principal-Component-Analysis.ipynb).\n",
+    "To illustrate, let's apply Isomap on some data from the Labeled Faces in the Wild dataset, which we previously saw in [In-Depth: Support Vector Machines](07-Support-Vector-Machines.ipynb) and [In Depth: Principal Component Analysis](09-Principal-Component-Analysis.ipynb).\n",
     "Running this command will download the dataset and cache it in your home directory for later use:"
    ]
   },
@@ -748,7 +748,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we encountered this data in [In Depth: Principal Component Analysis](05.09-Principal-Component-Analysis.ipynb), our goal was essentially compression: to use the components to reconstruct the inputs from the lower-dimensional representation.\n",
+    "When we encountered this data in [In Depth: Principal Component Analysis](09-Principal-Component-Analysis.ipynb), our goal was essentially compression: to use the components to reconstruct the inputs from the lower-dimensional representation.\n",
     "\n",
     "PCA is versatile enough that we can also use it in this context, where we would like to plot a low-dimensional embedding of the 2,914-dimensional data to learn the fundamental relationships between the images. Let's again look at the explained variance ratio, which will give us an idea of how many linear features are required to describe the data (see the following figure):"
    ]
@@ -905,7 +905,7 @@
     "The result is interesting. The first two Isomap dimensions seem to describe global image features: the overall brightness of the image from left to right, and the general orientation of the face from bottom to top.\n",
     "This gives us a nice visual indication of some of the fundamental features in our data.\n",
     "\n",
-    "From here, we could then go on to classify this data (perhaps using manifold features as inputs to the classification algorithm) as we did in [In-Depth: Support Vector Machines](05.07-Support-Vector-Machines.ipynb)."
+    "From here, we could then go on to classify this data (perhaps using manifold features as inputs to the classification algorithm) as we did in [In-Depth: Support Vector Machines](07-Support-Vector-Machines.ipynb)."
    ]
   },
   {
@@ -915,7 +915,7 @@
     "## Example: Visualizing Structure in Digits\n",
     "\n",
     "As another example of using manifold learning for visualization, let's take a look at the MNIST handwritten digits dataset.\n",
-    "This is similar to the digits dataset we saw in [In-Depth: Decision Trees and Random Forests](05.08-Random-Forests.ipynb), but with many more pixels per image.\n",
+    "This is similar to the digits dataset we saw in [In-Depth: Decision Trees and Random Forests](08-Random-Forests.ipynb), but with many more pixels per image.\n",
     "It can be downloaded from http://openml.org/ with the Scikit-Learn utility:"
    ]
   },
