--- a/11-K-Means.ipynb
+++ b/11-K-Means.ipynb
@@ -350,7 +350,7 @@
    "source": [
     "Whether the result is meaningful is a question that is difficult to answer definitively; one approach that is rather intuitive, but that we won't discuss further here, is called [silhouette analysis](http://scikit-learn.org/stable/auto_examples/cluster/plot_kmeans_silhouette_analysis.html).\n",
     "\n",
-    "Alternatively, you might use a more complicated clustering algorithm that has a better quantitative measure of the fitness per number of clusters (e.g., Gaussian mixture models; see [In Depth: Gaussian Mixture Models](05.12-Gaussian-Mixtures.ipynb)) or which *can* choose a suitable number of clusters (e.g., DBSCAN, mean-shift, or affinity propagation, all available in the `sklearn.cluster` submodule)."
+    "Alternatively, you might use a more complicated clustering algorithm that has a better quantitative measure of the fitness per number of clusters (e.g., Gaussian mixture models; see [In Depth: Gaussian Mixture Models](12-Gaussian-Mixtures.ipynb)) or which *can* choose a suitable number of clusters (e.g., DBSCAN, mean-shift, or affinity propagation, all available in the `sklearn.cluster` submodule)."
    ]
   },
   {
@@ -407,7 +407,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This situation is reminiscent of the discussion in [In-Depth: Support Vector Machines](05.07-Support-Vector-Machines.ipynb), where we used a kernel transformation to project the data into a higher dimension where a linear separation is possible.\n",
+    "This situation is reminiscent of the discussion in [In-Depth: Support Vector Machines](07-Support-Vector-Machines.ipynb), where we used a kernel transformation to project the data into a higher dimension where a linear separation is possible.\n",
     "We might imagine using the same trick to allow *k*-means to discover non-linear boundaries.\n",
     "\n",
     "One version of this kernelized *k*-means is implemented in Scikit-Learn within the ``SpectralClustering`` estimator.\n",
@@ -478,7 +478,7 @@
    "source": [
     "### Example 1: k-Means on Digits\n",
     "\n",
-    "To start, let's take a look at applying *k*-means on the same simple digits data that we saw in [In-Depth: Decision Trees and Random Forests](05.08-Random-Forests.ipynb) and [In Depth: Principal Component Analysis](05.09-Principal-Component-Analysis.ipynb).\n",
+    "To start, let's take a look at applying *k*-means on the same simple digits data that we saw in [In-Depth: Decision Trees and Random Forests](08-Random-Forests.ipynb) and [In Depth: Principal Component Analysis](09-Principal-Component-Analysis.ipynb).\n",
     "Here we will attempt to use *k*-means to try to identify similar digits *without using the original label information*; this might be similar to a first step in extracting meaning from a new dataset about which you don't have any *a priori* label information.\n",
     "\n",
     "We will start by loading the dataset, then find the clusters.\n",
@@ -695,7 +695,7 @@
     "But this still shows that using *k*-means, we can essentially build a digit classifier *without reference to any known labels*!\n",
     "\n",
     "Just for fun, let's try to push this even farther.\n",
-    "We can use the t-distributed stochastic neighbor embedding algorithm (mentioned in [In-Depth: Manifold Learning](05.10-Manifold-Learning.ipynb)) to preprocess the data before performing *k*-means.\n",
+    "We can use the t-distributed stochastic neighbor embedding algorithm (mentioned in [In-Depth: Manifold Learning](10-Manifold-Learning.ipynb)) to preprocess the data before performing *k*-means.\n",
     "t-SNE is a nonlinear embedding algorithm that is particularly adept at preserving points within clusters.\n",
     "Let's see how it does:"
    ]
